<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rectangle_corner_background"
    tools:context=".view.MainActivity">


    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_dimen"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_lbl_cancelar"
                style="@style/textview_label"
                android:layout_weight="0.5"
                android:text="@string/cancelar"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txt_lbl_deportes"
                style="@style/textview_label"
                android:layout_weight="1"
                android:text="@string/deportes"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_lbl_guardar"
                style="@style/textview_label"
                android:layout_weight="0.5"
                android:text="@string/guardar"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_lbl_seleccanio"
            style="@style/textview_label"
            android:layout_margin="@dimen/_20dp"
            android:text="@string/selecciona_un_minimo_de_3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_selected_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollablContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footerView"
        android:layout_below="@+id/headerView"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_dimen"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:orientation="vertical">

        <View
            android:id="@+id/view4"
            android:layout_width="@dimen/_200dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:background="@color/white" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="false" />

</RelativeLayout>
